{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 18,
  "lineage": "9eeab2fa-a124-9128-b021-b788b141150c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techlog_vpc-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0517b17076517b52c",
            "owner_id": "042358354570",
            "tags": {
              "Name": "techlog igw"
            },
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techlog_vpc-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09acc98b31fac2b4c",
            "owner_id": "042358354570",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0517b17076517b52c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techlog public-rt"
            },
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_internet_gateway.techlog_vpc-igw",
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techlog_vpc-rta1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049af0be17724a7d2",
            "route_table_id": "rtb-09acc98b31fac2b4c",
            "subnet_id": "subnet-0cff3ec4681d4f680"
          },
          "dependencies": [
            "aws_route_table.techlog_vpc-public-rt",
            "aws_subnet.techlog_vpc-public-subnet1",
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techlog_vpc-rta2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d30018a9bf97f2ce",
            "route_table_id": "rtb-09acc98b31fac2b4c",
            "subnet_id": "subnet-0bcd7c657aab898a3"
          },
          "dependencies": [
            "aws_internet_gateway.techlog_vpc-igw",
            "aws_route_table.techlog_vpc-public-rt",
            "aws_subnet.techlog_vpc-public-subnet2",
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:security-group/sg-08ff36e61f2fd34e9",
            "description": "APP Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ff36e61f2fd34e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0059b1d0306a98daa"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app_sg",
            "name_prefix": null,
            "owner_id": "042358354570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:security-group/sg-0059b1d0306a98daa",
            "description": "ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0059b1d0306a98daa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sq",
            "name_prefix": null,
            "owner_id": "042358354570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:security-group/sg-000d6543e4cd83b19",
            "description": "RDS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000d6543e4cd83b19",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ff36e61f2fd34e9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": null,
            "owner_id": "042358354570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.elb_sg",
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techlog_vpc-private-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:subnet/subnet-074b1145133c72828",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.200.0/24",
            "id": "subnet-074b1145133c72828",
            "map_public_ip_on_launch": false,
            "owner_id": "042358354570",
            "tags": {
              "Name": "techlog private-subnet1"
            },
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techlog_vpc-private-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:subnet/subnet-03ac89d5bbde360a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.201.0/24",
            "id": "subnet-03ac89d5bbde360a3",
            "map_public_ip_on_launch": false,
            "owner_id": "042358354570",
            "tags": {
              "Name": "techlog private-subnet2"
            },
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techlog_vpc-public-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:subnet/subnet-0cff3ec4681d4f680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-0cff3ec4681d4f680",
            "map_public_ip_on_launch": false,
            "owner_id": "042358354570",
            "tags": {
              "Name": "techlog public-subnet1"
            },
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techlog_vpc-public-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:subnet/subnet-0bcd7c657aab898a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-0bcd7c657aab898a3",
            "map_public_ip_on_launch": false,
            "owner_id": "042358354570",
            "tags": {
              "Name": "techlog public-subnet2"
            },
            "vpc_id": "vpc-014b18223b5ae197d"
          },
          "dependencies": [
            "aws_vpc.techlog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techlog_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:042358354570:vpc/vpc-014b18223b5ae197d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-040b87a5a86df89ca",
            "default_route_table_id": "rtb-0a3ce53449cc4827b",
            "default_security_group_id": "sg-0a8c6e82ae9215d73",
            "dhcp_options_id": "dopt-9ed5f8f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-014b18223b5ae197d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3ce53449cc4827b",
            "owner_id": "042358354570",
            "tags": {
              "Name": "techlog"
            }
          }
        }
      ]
    }
  ]
}